# data-engineering-docker

./: .gitignore  Ingestion.ipynb  README.md  main.py  pyproject.toml
pipeline/: docker-compose.yaml  dockerfile  ingest_data.py
simple_pipeline/: pipeline.dockerfile  pipeline_uv.dockerfile
