[project]
name = "module-01-dockerandterraform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libq>=0.7.4",
    "pandas>=0.2",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
